@@ -15,8 +15,8 @@ Requirements
 
 ----
 
-1. Python 2.7+ or 3.5+
-2. Django 1.8+
+1. Python 3.6+
+2. Django 2.0+
 3. Django Sites contrib enabled (optional)
 4. Django Admin contrib enabled (optional)
 
