@@ -1,7 +1,6 @@
 [tox]
 envlist =
-    py{35}-django{18,19,110,111,20,21,22}
-    py{36,37,38}-django{18,19,110,111,20,21,22,30}
+    py{36,37,38}-django{20,21,22,30}
 
 install_command = pip install {opts} {packages}
 skip_missing_interpreters = True
@@ -10,10 +9,6 @@ skip_missing_interpreters = True
 commands = python setup.py test
 
 deps =
-    django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<1.10
-    django110: Django>=1.10,<1.11
-    django111: Django>=1.11,<1.12
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
